--- a/bronze/08. stocks.ipynb
+++ b/bronze/08. stocks.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2ad75f67-a8b5-4d3b-9d96-558c348aface",
      "showTitle": false,
