--- a/bronze/09. stores.ipynb
+++ b/bronze/09. stores.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d3c21dba-65e1-4268-83ea-9b46ecdd7bf6",
      "showTitle": false,
@@ -14,7 +17,19 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "resource_path = '/Volumes/bikestore/resource/origem'\n",
+    "bronze_path = 'bikestore.bronze'\n",
+    "\n",
+    "df_brands = spark.read.csv(f'{resource_path}'+'/stores.csv', \n",
+    "                           header = True, \n",
+    "                           inferSchema=True, \n",
+    "                           sep=',')\n",
+    "\n",
+    "df_brands.write.mode('overwrite').\\\n",
+    "                option('mergeSchema','true').\\\n",
+    "                saveAsTable(bronze_path + '.stores')"
+   ]
   }
  ],
  "metadata": {
@@ -27,7 +42,9 @@
    },
    "inputWidgetPreferences": null,
    "language": "python",
-   "notebookMetadata": {},
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
    "notebookName": "09. stores",
    "widgets": {}
   },
