--- a/silver/03. customers.ipynb
+++ b/silver/03. customers.ipynb
@@ -24,7 +24,7 @@
     "silver_path = 'bikestore.silver'\n",
     "\n",
     "# Carrega a tabela bronze\n",
-    "customers = spark.table(bronze_path+\".ustomers\")\n",
+    "customers = spark.table(bronze_path+\".customers\")\n",
     "\n",
     "# Aplica os filtros equivalentes ao WHERE\n",
     "df_customer_silver = (\n",
